<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PasswordActivity">

    <include
        android:id="@+id/appBarPassword"
        layout="@layout/custom_app_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/textViewPasswordPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/your_password"
            android:textColor="@color/colorBlack"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textViewPasswordDescriptionPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewPasswordPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/password_des"
            android:textColor="@color/colorSecondaryText"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextPasswordPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewPasswordDescriptionPassword"
            android:layout_marginTop="10dp"
            android:hint="@string/your_pass"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/colorSecondaryText"
            android:textColorHint="@color/colorSecondaryText" />

        <EditText
            android:id="@+id/editTextConfirmPasswordPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextPasswordPassword"
            android:layout_marginTop="10dp"
            android:hint="@string/your_confirm_pass"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/colorSecondaryText"
            android:textColorHint="@color/colorSecondaryText" />

        <Button
            android:id="@+id/buttonCreateAccountRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextConfirmPasswordPassword"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_button"
            android:text="@string/create_account"
            android:textColor="@color/colorWhite"
            android:textSize="17sp" />

    </RelativeLayout>
</RelativeLayout>