<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayoutParentLogIn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LogInActivity">

    <include
        android:id="@+id/toolbarLogIn"
        layout="@layout/custom_app_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarLogIn"
        android:padding="10dp">

        <EditText
            android:id="@+id/editTextEmailLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/colorSecondaryText"
            android:textColorHint="@color/colorSecondaryText" />

        <EditText
            android:id="@+id/editTextPasswordLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextEmailLogIn"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/colorSecondaryText"
            android:textColorHint="@color/colorSecondaryText" />

        <Button
            android:id="@+id/buttonLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextPasswordLogIn"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_button"
            android:text="@string/log_in"
            android:textColor="@color/colorWhite"
            android:textSize="17sp" />

        <LinearLayout
            android:id="@+id/linearLayoutForgotPasswordContainerLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonLogIn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewForgotPasswordLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/colorSecondaryText"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textViewClickForgotPasswordLogIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/click_here"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutDividerContainerLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayoutForgotPasswordContainerLogIn"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="@color/colorSecondaryText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/or"
                android:textColor="@color/colorSecondaryText" />

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="@color/colorSecondaryText" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewNeedNewAccountLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayoutDividerContainerLogIn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/need_a_new_account"
            android:textColor="@color/colorAccent" />

    </RelativeLayout>


</RelativeLayout>